<resources>
    <string name="app_name">MyTasks</string>
    <string name="click_twice">Please click BACK again to exit</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="an_error_has_occurred">An unexpected error has occurred</string>
    <string name="login">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">Or</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint" translatable="false">Ex: 012 345 678 90</string>
    <string name="welcome_to_my_tasks">Welcome to MyTasks</string>
    <string name="phone_auth_rationale">We\'ll be taking few minutes from you to verify your phone number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_question">Didn\'t receive a Code? Resend in %1$dS</string>
    <string name="sms_has_been_sent">An SMS message containing a verification code has been sent to your phone number (%1$s)</string>
    <string name="error_invalid_phone">Please enter valid phone number</string>
    <string name="phone_verification_failed">Phone verification failed</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="connection_error">Connection Error</string>
    <string name="internet_try_again">Please check your internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="nickname">Nickname</string>
    <string name="name_hint" translatable="false">Donald Duck</string>
    <string name="phone_number_not_registered">This phone number is not registered</string>
    <string name="phone_number_already_registered">This phone number is already registered</string>
    <string name="please_enter_you_name">Please enter you nickname</string>
    <string name="all_subtasks_are_completed_error">Can\'t update status as all subtasks are marked completed. Please change their status first</string>
    <string name="all_tasks">All Tasks</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_switch_language">Are you sure you want to switch language to Arabic?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="new_task">New Task</string>
    <string name="add_new_task">Add new task</string>
    <string name="edit_task">Edit task</string>
    <string name="task_title">Task title</string>
    <string name="task_title_hint">Do the laundry</string>
    <string name="task_description">Task description (optional)</string>
    <string name="task_description_hint">Remember to separate white cloth</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="invalid_task_title">Invalid task title</string>
    <string name="invalid_date_range">Invalid date range</string>
    <string name="task_created_successfully">Task created successfully</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="pending">Pending</string>
    <string name="in_progress">In-Progress</string>
    <string name="completed">Completed</string>
    <string name="task_status">Task Status</string>
    <string name="please_pick_status">Please choose a status</string>
    <string name="delete_task_question_p1">Are you sure you want to delete this task?</string>
    <string name="delete_task_question_p2">And all of it\'s subtasks as well?</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="new_subtask">New Subtask</string>
    <string name="task_details">Task Details</string>
    <string name="subtasks">Subtasks</string>
</resources>