<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/elevatedCardBackground"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/lblMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/add_new_task"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/task_title"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/tilTaskTitle"
                app:layout_constraintTop_toBottomOf="@+id/lblMessage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblTaskTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/task_title_hint"
                    android:inputType="textLongMessage"
                    android:maxLines="3"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblTaskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/task_description"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/tilTaskTitle"
                app:layout_constraintTop_toBottomOf="@+id/tilTaskTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblTaskDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/task_description_hint"
                    android:inputType="textLongMessage"
                    android:maxLines="3"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/start_date"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/tilTaskTitle"
                app:layout_constraintTop_toBottomOf="@+id/tilTaskDescription" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvStartDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:cardBackgroundColor="@color/colorWhiteOrBlackInNight"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/lblStartDate"
                app:strokeColor="@color/colorSecondary"
                app:strokeWidth="@dimen/_1sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:drawableEnd="@drawable/ic_next"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Wed, 12 Aug 10:00 AM" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/end_date"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@id/cvStartDate"
                app:layout_constraintTop_toBottomOf="@+id/cvStartDate" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvEndDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:cardBackgroundColor="@color/colorWhiteOrBlackInNight"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/lblEndDate"
                app:strokeColor="@color/colorSecondary"
                app:strokeWidth="@dimen/_1sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:drawableEnd="@drawable/ic_next"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Wed, 12 Aug 10:00 AM" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/cancel"
                android:backgroundTint="@color/errorColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvEndDate" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/confirm"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/cvEndDate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>



